--- a/style.css
+++ b/style.css
@@ -88,6 +88,15 @@ body{
 }
 
 @media(max-width: 1250px){
+
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    /* #textGameOver{
+        font-size: 16px;
+    } */
+
     .card{
         width: 120px;
         height: 120px;
@@ -108,10 +117,24 @@ body{
         height: 100px;
     }
 
+    #textGameOver{
+        font-size: 26px;
+    }
+
     
 }
 
 @media(max-width: 600px){
+
+    #textGameOver{
+        font-size: 16px;
+    }
+
+    #restart{
+        font-size: 17px;
+        padding: 10px;
+    }
+
     .card{
         width: 70px;
         height: 70px;
