--- a/style.css
+++ b/style.css
@@ -93,10 +93,6 @@ body{
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* #textGameOver{
-        font-size: 16px;
-    } */
-
     .card{
         width: 120px;
         height: 120px;
@@ -119,9 +115,7 @@ body{
 
     #textGameOver{
         font-size: 26px;
-    }
-
-    
+    } 
 }
 
 @media(max-width: 600px){
@@ -149,17 +143,16 @@ body{
     .card{
         width: 60px;
         height: 60px;
-        /* background-color: yellow; */
-    }
-
-   
+    }  
 }
 
-/* @media(max-height: 700px){
+@media(max-height: 700px) and (min-width: 1000px){
     .card{
         width: 100px;
         height: 100px;
     }
 
-    
-} */
+    #accountant{
+        margin-bottom: 600px;
+    }
+}
